--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -25,11 +25,8 @@ jobs:
       - name: Build project
         run: bun build index.html --outdir dist
 
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      - name: Push gh-pages branch
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          path: ./dist
-
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
