--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -6,9 +6,8 @@ on:
       - main
 
 permissions:
-  contents: read
+  contents: write
   pages: write
-  id-token: write
 
 jobs:
   build-and-deploy:
@@ -18,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+        uses: oven-sh/setup-bun@v2
         with:
           bun-version: latest
 
