--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -1,31 +1,40 @@
-name: Deploy to GitHub Pages
+name: GitHub Pages Deployment
 
 on:
   push:
     branches:
       - main
 
-permissions:
-  contents: write
-  pages: write
-
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: latest
 
-      - name: Build project
+      - name: build
         run: bun build index.html --outdir dist
-
-      - name: Push gh-pages branch
-        uses: peaceiris/actions-gh-pages@v4
+      - name: Upload artifacts
+        uses: actions/upload-pages-artifact@v1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          path: dist
+
+  deploy:
+    needs: build
+
+    permissions:
+      pages: write
+      id-token: write
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v3
